# ChangeLog for app-cdr/dvd+rw-tools
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/dvd+rw-tools/ChangeLog,v 1.54 2007/11/12 06:52:07 vapier Exp $

  12 Nov 2007; Mike Frysinger <vapier@gentoo.org>
  -files/dvd+rw-tools-7.0-limits.patch, dvd+rw-tools-7.0.ebuild:
  Do not patch sources to use limits.h, fix linux-headers instead.

  26 Oct 2007; Roy Marples <uberlord@gentoo.org>
  +files/dvd+rw-tools-7.0-limits.patch, dvd+rw-tools-7.0.ebuild:
  Include limits.h to compile against newer headers, #195912 thanks to Sedorox

  05 May 2007; Jeroen Roovers <jer@gentoo.org> dvd+rw-tools-7.0.ebuild:
  Stable for HPPA (bug #156770).

  24 Jan 2007; Marius Mauch <genone@gentoo.org> dvd+rw-tools-6.0.ebuild,
  dvd+rw-tools-6.1.ebuild, dvd+rw-tools-6.1-r1.ebuild,
  dvd+rw-tools-7.0.ebuild:
  Replacing einfo with elog

  06 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
  dvd+rw-tools-7.0.ebuild:
  Stable on Alpha.

  05 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  dvd+rw-tools-7.0.ebuild:
  stable x86, bug #156770

  04 Dec 2006; Markus Rothe <corsair@gentoo.org> dvd+rw-tools-7.0.ebuild:
  Stable on ppc64; bug #156770

  04 Dec 2006; Luis Medinas <metalgod@gentoo.org> dvd+rw-tools-7.0.ebuild:
  Stable on amd64. Bug #156770.

  04 Dec 2006; Jason Wever <weeve@gentoo.org> dvd+rw-tools-7.0.ebuild:
  Stable on SPARC wrt bug #156770.

  03 Dec 2006; Lars Weiler <pylon@gentoo.org> dvd+rw-tools-7.0.ebuild:
  Stable on ppc; bug #156770.

*dvd+rw-tools-7.0 (08 Oct 2006)

  08 Oct 2006; Luis Medinas <metalgod@gentoo.org> +dvd+rw-tools-7.0.ebuild:
  Version Bump. Closes bug #149831.

  18 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
  dvd+rw-tools-6.1-r1.ebuild:
  Stable on alpha, requested by compnerd.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  dvd+rw-tools-6.1-r1.ebuild:
  Mark 6.1-r1 stable on ia64

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  dvd+rw-tools-6.1-r1.ebuild:
  Stable on ppc.
