@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/dvd+rw-tools
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/dvd+rw-tools/ChangeLog,v 1.54 2007/11/12 06:52:07 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/dvd+rw-tools/ChangeLog,v 1.55 2008/02/17 07:18:00 vapier Exp $
+
+  17 Feb 2008; Mike Frysinger <vapier@gentoo.org> dvd+rw-tools-7.0.ebuild:
+  Add missing m4 dependency and fixup flag munging.
 
   12 Nov 2007; Mike Frysinger <vapier@gentoo.org>
   -files/dvd+rw-tools-7.0-limits.patch, dvd+rw-tools-7.0.ebuild:
